Refinments and restart script for debugging

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -15,23 +15,24 @@ $mainMod       = SUPER
 $lockscreen    = hyprlock
 $notification  = swaync-client -t -sw
 $screenshot    = grim -g "$(slurp -d)" - | wl-copy
+$topbar        = waybar
+$externalscript1 = bash /home/ghost/.config/hypr/restart.sh
+$externalscript2 = bash /home/ghost/.config/hypr/wallpaper.sh
 
 ### AUTOSTART ###
 # Launch essential services and applications on startup
 exec-once = \
-    eval $(/usr/libexec/gnome-keyring-daemon --start --components=pkcs11,secrets,ssh,gpg) && \
-    waybar & \
+    /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 && \
+    $topbar & \
     swaync & \
     swayosd-server & \
     hypridle & \
     hyprpaper & \
     nm-applet --indicator & \
     clipse -listen & \
-    swaync-client --reload-config & \
     systemctl --user start hyprpolkitagent & \
     bash /home/ghost/.config/hypr/wallpaper.sh & \
     $menu
-
 
 ### ENVIRONMENT VARIABLES ###
 env = XCURSOR_SIZE, 24
@@ -53,8 +54,8 @@ general {
 decoration {
     rounding         = 10
     rounding_power   = 2
-    active_opacity   = 1.0
-    inactive_opacity = 0.95
+    active_opacity   = 0.95
+    inactive_opacity = 0.8
     shadow {
         enabled      = true
         range        = 6
@@ -93,17 +94,6 @@ animations {
     animation = workspacesIn, 1, 1.21, almostLinear, fade
     animation = workspacesOut, 1, 1.94, almostLinear, fade
 }
-
-# Window rules for clipse clipboard manager
-windowrule = float, class:(clipse)
-windowrule = size 622 652, class:(clipse)
-windowrule = stayfocused, class:(clipse)
-
-# GNOME Calendar window rules
-windowrule = float, title:^(Calendar)$
-windowrule = pin, title:^(Calendar)$
-windowrule = size 900 700, title:^(Calendar)$
-windowrule = move 25% 5%, title:^(Calendar)$
 
 # To reload Hyprland config after changes, run:
 # hyprctl reload
@@ -166,9 +156,10 @@ bind = $mainMod, N, exec, $notification,
 bind = $mainMod, V, exec, $terminal --class $clipboard
 bind = $mainMod, C, exec, $colorpicker
 bind = $mainMod SHIFT, UP, fullscreenstate, 1
-bind = $mainMod SHIFT, N, exec, bash /home/ghost/.config/hypr/wallpaper.sh
+bind = $mainMod SHIFT, N, exec, $externalscript2
 bind = Alt, Tab, cyclenext, prev
 bind = $mainMod SHIFT, S, exec, $screenshot
+bind = $mainMod, B, exec, $externalscript1
 
 
 # utility
@@ -267,3 +258,14 @@ windowrule = nofocus, class:^$, title:^$, xwayland:1, floating:1, fullscreen:0, 
 # Always float Picture-in-Picture windows, never tile them
 windowrule = float, title:^(Picture-in-Picture|PiP)$
 windowrule = tile, class:^(?!.*)$ # Dummy rule to ensure only PiP floats, not tiles
+
+# Window rules for clipse clipboard manager
+windowrule = float, class:(clipse)
+windowrule = size 622 652, class:(clipse)
+windowrule = stayfocused, class:(clipse)
+
+# GNOME Calendar window rules
+windowrule = float, title:^(Calendar)$
+windowrule = pin, title:^(Calendar)$
+windowrule = size 400 400, title:^(Calendar)$
+windowrule = move 39% 12%, title:^(Calendar)$
