--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -18,5 +18,5 @@ preload = /mnt/DATA/Home_Folders/Pictures/wallpapers/Street-2.png
 preload = /mnt/DATA/Home_Folders/Pictures/wallpapers/Sunset-Forrest.png
 preload = /mnt/DATA/Home_Folders/Pictures/wallpapers/Sunset-room.png
 
-# Wallpaper directory
-wallpaper = /mnt/DATA/Home_Folders/Pictures/wallpapers
+# Assign a wallpaper to the eDP-1 monitor to avoid warning
+wallpaper = eDP-1,/mnt/DATA/Home_Folders/Pictures/wallpapers/Dark_Nature.png
