fixed apps startup and gnome keyring on boot

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -21,18 +21,19 @@ $externalscript2 = bash /home/ghost/.config/hypr/wallpaper.sh
 
 ### AUTOSTART ###
 # Launch essential services and applications on startup
-exec-once = \
-    /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 && \
-    $topbar & \
-    swaync & \
-    swayosd-server & \
-    hypridle & \
-    hyprpaper & \
-    nm-applet --indicator & \
-    clipse -listen & \
-    systemctl --user start hyprpolkitagent & \
-    bash /home/ghost/.config/hypr/wallpaper.sh & \
-    $menu
+
+exec-once = eval $(/usr/bin/gnome-keyring-daemon --start --components=pkcs11,secrets,ssh) && export SSH_AUTH_SOCK
+
+exec-once = waybar
+exec-once = hyprpaper
+exec-once = hypridle
+exec-once = swaync
+exec-once = swayosd-server
+exec-once = clipse -listen
+exec-once = nm-applet --indicator
+exec-once = systemctl --user start hyprpolkitagent
+exec-once = bash /home/ghost/.config/hypr/wallpaper.sh
+exec-once = wofi --show drun -s /home/ghost/.config/wofi/style.css
 
 ### ENVIRONMENT VARIABLES ###
 env = XCURSOR_SIZE, 24
@@ -269,3 +270,10 @@ windowrule = float, title:^(Calendar)$
 windowrule = pin, title:^(Calendar)$
 windowrule = size 400 400, title:^(Calendar)$
 windowrule = move 39% 12%, title:^(Calendar)$
+
+windowrule = opacity 0.0 override, class:^(xwaylandvideobridge)$
+windowrule = noanim, class:^(xwaylandvideobridge)$
+windowrule = noinitialfocus, class:^(xwaylandvideobridge)$
+windowrule = maxsize 1 1, class:^(xwaylandvideobridge)$
+windowrule = noblur, class:^(xwaylandvideobridge)$
+windowrule = nofocus, class:^(xwaylandvideobridge)$
