add app menu to waybar and turn on wifi on boot

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -15,7 +15,6 @@ $mainMod       = SUPER
 $lockscreen    = hyprlock
 $notification  = swaync-client -t -sw
 $screenshot    = grim -g "$(slurp -d)" - | wl-copy
-$topbar        = waybar
 $externalscript1 = bash /home/ghost/.config/hypr/restart.sh
 $externalscript2 = bash /home/ghost/.config/hypr/wallpaper.sh
 
@@ -23,7 +22,6 @@ $externalscript2 = bash /home/ghost/.config/hypr/wallpaper.sh
 # Launch essential services and applications on startup
 
 exec-once = eval $(/usr/bin/gnome-keyring-daemon --start --components=pkcs11,secrets,ssh) && export SSH_AUTH_SOCK
-
 exec-once = waybar
 exec-once = hyprpaper
 exec-once = hypridle
@@ -31,6 +29,7 @@ exec-once = swaync
 exec-once = swayosd-server
 exec-once = clipse -listen
 exec-once = nm-applet --indicator
+exec-once = nmcli radio wifi on
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = bash /home/ghost/.config/hypr/wallpaper.sh
 exec-once = wofi --show drun -s /home/ghost/.config/wofi/style.css
