--- a/waybar/config
+++ b/waybar/config
@@ -6,6 +6,7 @@
     "margin-left": 12,
     "margin-right": 12,
     "modules-left": [
+        "custom/ppmenu",
         "hyprland/workspaces",
         "hyprland/window"
     ],
@@ -19,6 +20,13 @@
         "pulseaudio",
         "battery"
     ],
+
+    "custom/ppmenu": {
+        "format": "💿",
+        "tooltip": "Open app menu",
+        "tooltip-format": "Open app menu",
+        "on-click": "wofi --show drun -s /home/ghost/.config/wofi/style.css"
+    },
 
     "hyprland/workspaces": {
         "format": "{icon}",
