v2 - added hyprland plugins and remade the lockscreen

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -2,7 +2,7 @@
 # Use preferred settings for built-in display, and auto-detect for others
 monitor = eDP-1, preferred, 0x0, 1
 monitor = , preferred, auto, 1
-monitor = DP-4, preferred, auto, 1, transform, 1
+#monitor = DP-4, preferred, auto, 1, transform, 1
 
 ### PROGRAM SHORTCUTS ###
 $terminal      = kitty
@@ -17,6 +17,50 @@ $notification  = swaync-client -t -sw
 $screenshot    = grim -g "$(slurp -d)" - | wl-copy
 $externalscript1 = bash /home/ghost/.config/hypr/restart.sh
 $externalscript2 = bash /home/ghost/.config/hypr/wallpaper.sh
+$externalscript3 = bash /home/ghost/Documents/dots/hypr/toggle-internal-display.sh
+
+### PLUGINS ###
+# Load hyprexpo plugin for workspace overview
+plugin = /usr/lib/hyprland/plugins/hyprexpo.so
+
+# Load hyprtrails plugin for window trailing effects
+plugin = /usr/lib64/hyprland/libhyprtrails.so
+
+# Hyprexpo configuration
+plugin:hyprexpo {
+    # Grid layout: 2 columns, 2 rows
+    columns = 2
+    rows = 2
+    
+    # Spacing between workspaces
+    gap_size = 20
+    
+    # Background color
+    bg_col = rgb(111111)
+    
+    # Workspace names
+    workspace_method = center current
+    
+    # Enable gestures
+    enable_gesture = true
+    gesture_distance = 300
+    gesture_positive = true
+}
+
+# Hyprtrails configuration
+plugin:hyprtrails {
+    # Trail color (white with transparency)
+    color = rgba(255, 255, 255, 0.8)
+    
+    # Trail size
+    size = 3
+    
+    # Trail speed (higher = faster fade)
+    speed = 0.8
+    
+    # Enable trails for all windows
+    enabled = true
+}
 
 ### AUTOSTART ###
 # Launch essential services and applications on startup
@@ -28,11 +72,16 @@ exec-once = hypridle
 exec-once = swaync
 exec-once = swayosd-server
 exec-once = clipse -listen
-exec-once = nm-applet --indicator
+exec-once = wl-paste --type text --watch cliphist store
+exec-once = wl-paste --type image --watch cliphist store
+exec-once = bash /home/ghost/Documents/dots/hypr/clipsync.sh
+exec-once = nm-applet
 exec-once = nmcli radio wifi on
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = bash /home/ghost/.config/hypr/wallpaper.sh
 exec-once = wofi --show drun -s /home/ghost/.config/wofi/style.css
+exec-once = bash /home/ghost/Documents/dots/hypr/lid-handler.sh
+exec-once = hyprctl keyword monitor "FALLBACK,1920x1080@60,auto,1"
 
 ### ENVIRONMENT VARIABLES ###
 env = XCURSOR_SIZE, 24
@@ -41,21 +90,43 @@ env = HYPRCURSOR_SIZE, 24
 
 ### LOOK AND FEEL ###
 general {
-    gaps_in           = 4
-    gaps_out          = 8
-    border_size       = 2
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    gaps_in             = 4
+    gaps_out            = 4
+    border_size         = 1
+    col.active_border   = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
-    resize_on_border  = true
-    allow_tearing     = false
-    layout            = dwindle
+    allow_tearing       = false
+    resize_on_border    = true
+    layout              = dwindle
+}
+
+
+misc {
+    force_default_wallpaper     = -1
+    disable_hyprland_logo       = true
+    # Multi-monitor workspace improvements
+    disable_autoreload          = false
+    mouse_move_enables_dpms     = true
+    key_press_enables_dpms      = true
+    always_follow_on_dnd        = true
+    layers_hog_keyboard_focus   = true
+    animate_manual_resizes      = false
+    disable_splash_rendering    = true
+    focus_on_activate           = false
+    enable_swallow              = true
+    swallow_regex               = ^(Alacritty|kitty|footclient)$
+}
+
+# Hardware cursor for better gaming performance
+cursor {
+    no_hardware_cursors = false
 }
 
 decoration {
     rounding         = 10
     rounding_power   = 2
-    active_opacity   = 0.95
-    inactive_opacity = 0.8
+    active_opacity   = 1
+    inactive_opacity = 0.95
     shadow {
         enabled      = true
         range        = 6
@@ -108,10 +179,6 @@ master {
     new_status = master
 }
 
-misc {
-    force_default_wallpaper = -1
-    disable_hyprland_logo   = true
-}
 
 ### INPUT ###
 input {
@@ -133,12 +200,24 @@ input {
 }
 
 gestures {
-    workspace_swipe = true
+    workspace_swipe_distance = 500
+    workspace_swipe_invert = true
+    workspace_swipe_min_speed_to_force = 30
+    workspace_swipe_cancel_ratio = 0.5
+    workspace_swipe_forever = true
+    gesture = 3, horizontal, workspace
+    gesture = 4, vertical, fullscreen
+    gesture = 3, up, close
 }
 
 device {
     name        = epic-mouse-v1
     sensitivity = -0.5
+}
+
+xwayland {
+  enabled = true
+  force_zero_scaling = true
 }
 
 ### KEYBINDINGS ###
@@ -147,8 +226,8 @@ device {
 bind = $mainMod, T, exec, $terminal
 bind = $mainMod, Q, killactive,
 bind = $mainMod, L, exec, $lockscreen
-bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, F, togglefloating,
+bind = $mainMod, F, exec, $fileManager
+bind = $mainMod, G, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo,
 bind = $mainMod, J, togglesplit,
@@ -160,7 +239,11 @@ bind = $mainMod SHIFT, N, exec, $externalscript2
 bind = Alt, Tab, cyclenext, prev
 bind = $mainMod SHIFT, S, exec, $screenshot
 bind = $mainMod, B, exec, $externalscript1
+bind = $mainMod, D, exec, $externalscript3
 
+# Expo plugin keybindings
+bind = $mainMod, E, hyprexpo:expo, toggle
+bind = $mainMod, grave, hyprexpo:expo, toggle
 
 # utility
 bind = $mainMod SHIFT, M, exec, python3 /home/ghost/Documents/Code/linux-sysutil/cli_tool.py media start
@@ -191,7 +274,13 @@ bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
-# Move window to workspace
+# Enhanced multi-monitor workspace navigation
+bind = $mainMod, bracketleft, workspace, m-1    # Previous workspace on current monitor
+bind = $mainMod, bracketright, workspace, m+1   # Next workspace on current monitor
+bind = $mainMod, TAB, workspace, previous        # Toggle between current and previous workspace
+bind = $mainMod, grave, focusmonitor, +1        # Focus next monitor (grave is ` key)
+
+# Move window to workspace (enhanced)
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
 bind = $mainMod SHIFT, 2, movetoworkspace, 2
 bind = $mainMod SHIFT, 3, movetoworkspace, 3
@@ -203,17 +292,22 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
-# Special workspace
-#bind = $mainMod, S, togglespecialworkspace, magic
-#bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+# Move window to adjacent workspace on current monitor
+bind = $mainMod SHIFT, bracketleft, movetoworkspace, m-1
+bind = $mainMod SHIFT, bracketright, movetoworkspace, m+1
 
-# Workspace cycling with mouse wheel
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
+# Move window to next monitor
+bind = $mainMod SHIFT, grave, movecurrentworkspacetomonitor, +1
 
 # Mouse bindings
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+# Enhanced mouse workspace cycling (monitor-aware)
+bind = $mainMod, mouse_down, workspace, m+1     # Next workspace on current monitor
+bind = $mainMod, mouse_up, workspace, m-1       # Previous workspace on current monitor
+bind = $mainMod CTRL, mouse_down, workspace, e+1  # Next workspace globally
+bind = $mainMod CTRL, mouse_up, workspace, e-1    # Previous workspace globally
 
 # Media and hardware keys
 # bindel = , XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
@@ -237,8 +331,6 @@ bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 bindel = , XF86PowerOff, exec, systemctl suspend
 
-
-
 # Window resizing
 # Grow windows
 bind = $mainMod, KP_Add, resizeactive, 20 20
@@ -251,13 +343,14 @@ binde = $mainMod SHIFT, up, resizeactive, 0 -20
 
 ### WINDOWS AND WORKSPACES ###
 # Suppress maximize event for all windows
+windowrule = stayfocused, class:zoom, title:menu window
 windowrule = suppressevent maximize, class:.*
 # Prevent focus on empty, floating, non-fullscreen, non-pinned XWayland windows
 windowrule = nofocus, class:^$, title:^$, xwayland:1, floating:1, fullscreen:0, pinned:0
 
 # Always float Picture-in-Picture windows, never tile them
 windowrule = float, title:^(Picture-in-Picture|PiP)$
-windowrule = tile, class:^(?!.*)$ # Dummy rule to ensure only PiP floats, not tiles
+# windowrule = tile, class:^(?!.*)$ # Dummy rule to ensure only PiP floats, not tiles
 
 # Window rules for clipse clipboard manager
 windowrule = float, class:(clipse)
@@ -276,3 +369,18 @@ windowrule = noinitialfocus, class:^(xwaylandvideobridge)$
 windowrule = maxsize 1 1, class:^(xwaylandvideobridge)$
 windowrule = noblur, class:^(xwaylandvideobridge)$
 windowrule = nofocus, class:^(xwaylandvideobridge)$
+
+### WORKSPACE RULES FOR MULTI-MONITOR ###
+# Assign workspaces to specific monitors
+workspace = 1, monitor:eDP-1, default:true
+workspace = 2, monitor:eDP-1
+workspace = 3, monitor:eDP-1
+workspace = 4, monitor:eDP-1
+workspace = 5, monitor:eDP-1
+workspace = 6, monitor:DP-4
+workspace = 7, monitor:DP-4
+workspace = 8, monitor:DP-4
+workspace = 9, monitor:DP-4
+workspace = 10, monitor:DP-4
+
+# Workspace switching
