--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -2,7 +2,7 @@
 background {
     monitor =
     path = /home/ghost/Pictures/wallpapers/Dark_Nature.png
-    blur_passes = 2
+    blur_passes = 0
     contrast = 0.8916
     brightness = 0.8172
     vibrancy = 0.1696
@@ -16,18 +16,22 @@ general {
     disable_loading_bar = false
 }
 
-# Profie-Photo
-image {
+# INPUT FIELD
+input-field {
     monitor =
-    path = ~/.config/hypr/vivek.png
-    border_size = 2
-    border_color = rgba(255, 255, 255, 0)
-    size = 130
-    rounding = -1
-    rotate = 0
-    reload_time = -1
-    reload_cmd = 
-    position = 0, 40
+    size = 180, 35
+    outline_thickness = 1
+    dots_size = 0.2 # Scale of input-field height, 0.2 - 0.8
+    dots_spacing = 0.2 # Scale of dots' absolute size, 0.0 - 1.0
+    dots_center = true
+    outer_color = rgba(0, 0, 0, 0)
+    inner_color = rgba(100, 114, 125, 0.4)
+    font_color = rgb(200, 200, 200)
+    fade_on_empty = false
+    font_family = SF Pro Roundeds
+    placeholder_text = <span foreground="##ffffff99">Enter Password</span>
+    hide_input = false
+    position = 0, -445
     halign = center
     valign = center
 }
@@ -35,11 +39,11 @@ image {
 # Day-Month-Date
 label {
     monitor =
-    text = cmd[update:1000] echo -e "$(date +"%A, %B %d")"
+    text = cmd[update:1000] echo -e "$(date +"%A, %d %B")"
     color = rgba(216, 222, 233, 0.70)
-    font_size = 25
-    font_family = SF Pro Display Bold
-    position = 0, 350
+    font_size = 23
+    font_family = SF Pro Rounded Semi-Bold
+    position = 0, 375
     halign = center
     valign = center
 }
@@ -47,75 +51,28 @@ label {
 # Time
 label {
     monitor =
-    text = cmd[update:1000] echo "<span>$(date +"%I:%M")</span>"
+    text = cmd[update:1000] echo "<span>$(date +"%H:%M")</span>"
     color = rgba(216, 222, 233, 0.70)
-    font_size = 120
-    font_family = SF Pro Display Bold
-    position = 0, 250
+    font_size = 110
+    font_family = SF Pro Rounded Semi-Bold
+    outline_thickness = 5
+    position = 0, 280
     halign = center
     valign = center
 }
 
-# USER-BOX
-shape {
+# Profie-Photo
+image {
     monitor =
-    size = 300, 60
-    color = rgba(255, 255, 255, .1)
+    path = /home/aditya/.config/hypr/hyprlock/aditya.png
+    border_color = 0xffdddddd
+    border_size = 0s
+    size = 65
     rounding = -1
-    border_size = 0
-    border_color = rgba(253, 198, 135, 0)
     rotate = 0
-    xray = false # if true, make a "hole" in the background (rectangle of specified size, no rotation)
-
-    position = 0, -130
+    reload_time = -1
+    reload_cmd = 
+    position = 0, -370
     halign = center
     valign = center
-}
-
-# USER
-label {
-    monitor =
-    text =     $USER
-    color = rgba(216, 222, 233, 0.80)
-    outline_thickness = 2
-    dots_size = 0.2 # Scale of input-field height, 0.2 - 0.8
-    dots_spacing = 0.2 # Scale of dots' absolute size, 0.0 - 1.0
-    dots_center = true
-    font_size = 18
-    font_family = SF Pro Display Bold
-    position = 0, -130
-    halign = center
-    valign = center
-}
-
-# INPUT FIELD
-input-field {
-    monitor =
-    size = 300, 60
-    outline_thickness = 2
-    dots_size = 0.2 # Scale of input-field height, 0.2 - 0.8
-    dots_spacing = 0.2 # Scale of dots' absolute size, 0.0 - 1.0
-    dots_center = true
-    outer_color = rgba(0, 0, 0, 0)
-    inner_color = rgba(255, 255, 255, 0.1)
-    font_color = rgb(200, 200, 200)
-    fade_on_empty = false
-    font_family = SF Pro Display Bold
-    placeholder_text = <i><span foreground="##ffffff99">🔒 Enter Pass</span></i>
-    hide_input = false
-    position = 0, -210
-    halign = center
-    valign = center
-}
-
-# CURRENT SONG
-label {
-    monitor =
-    text = cmd[update:1000] echo "$(~/.config/hypr/Scripts/songdetail.sh)" 
-    color = rgba(255, 255, 255, 0.6)
-    font_size = 18
-    font_family = JetBrains Mono Nerd, SF Pro Display Bold
-    position = 0, 50
-    halign = center
-    valign = bottom
 }
