--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -19,48 +19,6 @@ $externalscript1 = bash /home/ghost/.config/hypr/restart.sh
 $externalscript2 = bash /home/ghost/.config/hypr/wallpaper.sh
 $externalscript3 = bash /home/ghost/Documents/dots/hypr/toggle-internal-display.sh
 
-### PLUGINS ###
-# Load hyprexpo plugin for workspace overview
-plugin = /usr/lib/hyprland/plugins/hyprexpo.so
-
-# Load hyprtrails plugin for window trailing effects
-plugin = /usr/lib64/hyprland/libhyprtrails.so
-
-# Hyprexpo configuration
-plugin:hyprexpo {
-    # Grid layout: 2 columns, 2 rows
-    columns = 2
-    rows = 2
-    
-    # Spacing between workspaces
-    gap_size = 20
-    
-    # Background color
-    bg_col = rgb(111111)
-    
-    # Workspace names
-    workspace_method = center current
-    
-    # Enable gestures
-    enable_gesture = true
-    gesture_distance = 300
-    gesture_positive = true
-}
-
-# Hyprtrails configuration
-plugin:hyprtrails {
-    # Trail color (white with transparency)
-    color = rgba(255, 255, 255, 0.8)
-    
-    # Trail size
-    size = 3
-    
-    # Trail speed (higher = faster fade)
-    speed = 0.8
-    
-    # Enable trails for all windows
-    enabled = true
-}
 
 ### AUTOSTART ###
 # Launch essential services and applications on startup
@@ -207,7 +165,7 @@ gestures {
     workspace_swipe_forever = true
     gesture = 3, horizontal, workspace
     gesture = 4, vertical, fullscreen
-    gesture = 3, up, close
+   # gesture = 3, up, close
 }
 
 device {
@@ -226,7 +184,7 @@ xwayland {
 bind = $mainMod, T, exec, $terminal
 bind = $mainMod, Q, killactive,
 bind = $mainMod, L, exec, $lockscreen
-bind = $mainMod, F, exec, $fileManager
+bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, G, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo,
@@ -242,13 +200,13 @@ bind = $mainMod, B, exec, $externalscript1
 bind = $mainMod, D, exec, $externalscript3
 
 # Expo plugin keybindings
-bind = $mainMod, E, hyprexpo:expo, toggle
-bind = $mainMod, grave, hyprexpo:expo, toggle
+# bind = $mainMod, E, hyprexpo:expo, toggle
+#bind = $mainMod, grave, hyprexpo:expo, toggle  
 
 # utility
 bind = $mainMod SHIFT, M, exec, python3 /home/ghost/Documents/Code/linux-sysutil/cli_tool.py media start
 bind = $mainMod SHIFT, K, exec, python3 /home/ghost/Documents/Code/linux-sysutil/cli_tool.py media stop
-bind = $mainMod SHIFT, K, exec, python3 /home/ghost/Documents/Code/linux-sysutil/cli_tool.py net bluetooth
+bind = $mainMod SHIFT, K, exec, python3 /home/ghost/Documents/Code/linux-sysutil/cli_tool.py net bluetooth 2
 
 
 # Focus movement
