Updated hyprland configuration: removed internal display toggle script, adjusted border size, and added laptop lid switch handling for display management.

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -17,7 +17,6 @@ $notification  = swaync-client -t -sw
 $screenshot    = grim -g "$(slurp -d)" - | wl-copy
 $externalscript1 = bash /home/ghost/.config/hypr/restart.sh
 $externalscript2 = bash /home/ghost/.config/hypr/wallpaper.sh
-$externalscript3 = bash /home/ghost/Documents/dots/hypr/toggle-internal-display.sh
 
 
 ### AUTOSTART ###
@@ -38,8 +37,9 @@ exec-once = nmcli radio wifi on
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = bash /home/ghost/.config/hypr/wallpaper.sh
 exec-once = wofi --show drun -s /home/ghost/.config/wofi/style.css
-exec-once = bash /home/ghost/Documents/dots/hypr/lid-handler.sh
 exec-once = hyprctl keyword monitor "FALLBACK,1920x1080@60,auto,1"
+
+
 
 ### ENVIRONMENT VARIABLES ###
 env = XCURSOR_SIZE, 24
@@ -50,7 +50,7 @@ env = HYPRCURSOR_SIZE, 24
 general {
     gaps_in             = 4
     gaps_out            = 4
-    border_size         = 1
+    border_size         = 4
     col.active_border   = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
     allow_tearing       = false
@@ -197,7 +197,6 @@ bind = $mainMod SHIFT, N, exec, $externalscript2
 bind = Alt, Tab, cyclenext, prev
 bind = $mainMod SHIFT, S, exec, $screenshot
 bind = $mainMod, B, exec, $externalscript1
-bind = $mainMod, D, exec, $externalscript3
 
 # Expo plugin keybindings
 # bind = $mainMod, E, hyprexpo:expo, toggle
@@ -288,6 +287,11 @@ bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 bindel = , XF86PowerOff, exec, systemctl suspend
+
+# Laptop lid switch handler
+#bindl = , switch:Lid Switch, exec, $lockscreen
+bindl = , switch:on:Lid Switch, exec, hyprctl keyword monitor "eDP-1, disable"
+bindl = , switch:off:Lid Switch, exec, hyprctl keyword monitor "eDP-1, preferred, 0x0, 1"
 
 # Window resizing
 # Grow windows
