Updated README with installation instructions for Bluejay Bluetooth app and corrected typos; modified Waybar config to launch Bluejay on click.

--- a/waybar/config
+++ b/waybar/config
@@ -104,7 +104,7 @@
         "format": " {status}",
         "format-connected": " {device_alias}",
         "format-disconnected": " Disconnected",
-        "on-click": "blueman-manager"
+        "on-click": "flatpak run io.github.ebonjaeger.bluejay"
     },
 
     "custom/hypridle": {
