Modularized Hyprland config and added new customizations
Split hyprland.conf into modular files in hypr/modules/ for better organization. Updated window rules to new match syntax, added swappy screenshot annotation tool with Shift+A keybind, configured kitty theme (dank) and tab styling, set GTK theme to Adwaita dark. Removed quickshell configuration.

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -44,7 +44,7 @@ exec-once = hyprctl keyword monitor "FALLBACK,1920x1080@60,auto,1"
 ### ENVIRONMENT VARIABLES ###
 env = XCURSOR_SIZE, 24
 env = HYPRCURSOR_SIZE, 24
-#senv = GTK_THEME, Adwaita-dark
+env = GTK_THEME,Adwaita:dark
 
 ### LOOK AND FEEL ###
 general {
@@ -196,6 +196,7 @@ bind = $mainMod SHIFT, UP, fullscreenstate, 1
 bind = $mainMod SHIFT, N, exec, $externalscript2
 bind = Alt, Tab, cyclenext, prev
 bind = $mainMod SHIFT, S, exec, $screenshot
+bind = $mainMod SHIFT, A, exec, grim -g "$(slurp -d)" - | swappy -f -
 bind = $mainMod, B, exec, $externalscript1
 
 # Expo plugin keybindings
@@ -304,33 +305,36 @@ binde = $mainMod SHIFT, left, resizeactive, -20 0
 binde = $mainMod SHIFT, up, resizeactive, 0 -20
 
 ### WINDOWS AND WORKSPACES ###
+# Zoom menu window rules
+windowrule = match:class zoom, match:title (menu window), stay_focused on
+
 # Suppress maximize event for all windows
-windowrule = stayfocused, class:zoom, title:menu window
-windowrule = suppressevent maximize, class:.*
-# Prevent focus on empty, floating, non-fullscreen, non-pinned XWayland windows
-windowrule = nofocus, class:^$, title:^$, xwayland:1, floating:1, fullscreen:0, pinned:0
+windowrule = match:class .*, suppress_event = maximize
+
+# Prevent focus on empty, floating, non-fullscreen, non-pinned XWayland windows (simplified)
+windowrule = match:class ^$, match:title ^$, no_focus on
 
 # Always float Picture-in-Picture windows, never tile them
-windowrule = float, title:^(Picture-in-Picture|PiP)$
-# windowrule = tile, class:^(?!.*)$ # Dummy rule to ensure only PiP floats, not tiles
+windowrule = match:title ^(Picture-in-Picture|PiP)$, float on
 
 # Window rules for clipse clipboard manager
-windowrule = float, class:(clipse)
-windowrule = size 622 652, class:(clipse)
-windowrule = stayfocused, class:(clipse)
+windowrule = match:class clipse, float on
+windowrule = match:class clipse, size 622 652
+windowrule = match:class clipse, stay_focused on
 
 # GNOME Calendar window rules
-windowrule = float, title:^(Calendar)$
-windowrule = pin, title:^(Calendar)$
-windowrule = size 400 400, title:^(Calendar)$
-windowrule = move 39% 12%, title:^(Calendar)$
+windowrule = match:title ^(Calendar)$, float on
+windowrule = match:title ^(Calendar)$, pin on
+windowrule = match:title ^(Calendar)$, size 400 400
+windowrule = match:title ^(Calendar)$, move 39% 12%
 
-windowrule = opacity 0.0 override, class:^(xwaylandvideobridge)$
-windowrule = noanim, class:^(xwaylandvideobridge)$
-windowrule = noinitialfocus, class:^(xwaylandvideobridge)$
-windowrule = maxsize 1 1, class:^(xwaylandvideobridge)$
-windowrule = noblur, class:^(xwaylandvideobridge)$
-windowrule = nofocus, class:^(xwaylandvideobridge)$
+# XWayland video bridge rules
+windowrule = match:class ^(xwaylandvideobridge)$, opacity 0.0 override
+windowrule = match:class ^(xwaylandvideobridge)$, no_anim on
+windowrule = match:class ^(xwaylandvideobridge)$, no_initial_focus on
+windowrule = match:class ^(xwaylandvideobridge)$, max_size 1 1
+windowrule = match:class ^(xwaylandvideobridge)$, no_blur on
+windowrule = match:class ^(xwaylandvideobridge)$, no_focus on
 
 ### WORKSPACE RULES FOR MULTI-MONITOR ###
 # Assign workspaces to specific monitors
