Remove QuickShell and update dependencies
Removed all QuickShell references from hyprland config modules. Replaced QuickShell functionality with native alternatives: wofi for app launcher and power menu (wlogout), cliphist+wofi for clipboard manager. Updated README with current dependencies including swappy, wlogout, cliphist, and gnome-keyring. Fixed typo in dependencies (clispe -> clipse).

--- a/hypr/modules/keys.conf
+++ b/hypr/modules/keys.conf
@@ -3,14 +3,13 @@ $mainMod       = SUPER
 $terminal      = kitty
 $fileManager   = nautilus
 $browser       = firefox
-$menu          = quickshell -p ~/.config/quickshell/search.qml
-$clipboard     = quickshell -p ~/.config/quickshell/clipboard.qml
+$menu          = wofi --show drun
+$clipboard     = cliphist list | wofi --dmenu | cliphist decode | wl-copy
 $colorpicker   = hyprpicker -a
-$mainMod       = SUPER
 $lockscreen    = hyprlock
 $notification  = swaync-client -t -sw
 $screenshot    = grim -g "$(slurp -d)" - | wl-copy
-$shutdown      = quickshell -p ~/.config/quickshell/powermenu.qml
+$shutdown      = wlogout
 $externalscript1 = bash /home/ghost/.config/hypr/restart.sh
 $externalscript2 = bash /home/ghost/.config/hypr/wallpaper.sh
 
@@ -114,7 +113,7 @@ bindl = , XF86AudioNext, exec, playerctl next
 bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
-bindel = , XF86PowerOff, exec, quickshell -p ~/.config/quickshell/powermenu.qml
+bindel = , XF86PowerOff, exec, wlogout
 
 
 # Window resizing
