--- a/hypr/modules/keys.conf
+++ b/hypr/modules/keys.conf
@@ -10,6 +10,7 @@ $lockscreen    = hyprlock
 $notification  = swaync-client -t -sw
 $screenshot    = grim -g "$(slurp -d)" - | wl-copy
 $shutdown      = wlogout
+$screenshotocr = bash /home/ghost/.config/hypr/screenshot-ocr.sh
 $externalscript1 = bash /home/ghost/.config/hypr/restart.sh
 $externalscript2 = bash /home/ghost/.config/hypr/wallpaper.sh
 
@@ -28,6 +29,7 @@ bind = $mainMod SHIFT, C, exec, $colorpicker
 bind = $mainMod SHIFT, N, exec, $externalscript2
 bind = Alt, Tab, cyclenext, prev
 bind = $mainMod SHIFT, S, exec, $screenshot
+bind = CTRL ALT SHIFT, S, exec, $screenshotocr
 bind = $mainMod, B, exec, $externalscript1
 bind = $mainMod SHIFT, E, exec, $shutdown
 
