Fix screenshot OCR keybind to Super+Ctrl+Shift+S
Changed keybind from Ctrl+Alt+Shift+S to Super+Ctrl+Shift+S for better compatibility with Hyprland modifier key handling.

--- a/hypr/modules/keys.conf
+++ b/hypr/modules/keys.conf
@@ -29,7 +29,7 @@ bind = $mainMod SHIFT, C, exec, $colorpicker
 bind = $mainMod SHIFT, N, exec, $externalscript2
 bind = Alt, Tab, cyclenext, prev
 bind = $mainMod SHIFT, S, exec, $screenshot
-bind = CTRL ALT SHIFT, S, exec, $screenshotocr
+bind = $mainMod CTRL SHIFT, S, exec, $screenshotocr
 bind = $mainMod, B, exec, $externalscript1
 bind = $mainMod SHIFT, E, exec, $shutdown
 
