Add screenshot OCR keybind to main hyprland.conf
Added Super+Ctrl+Shift+S keybind and screenshotocr variable to main hyprland.conf file since modular configs are not being sourced yet.

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -15,6 +15,7 @@ $mainMod       = SUPER
 $lockscreen    = hyprlock
 $notification  = swaync-client -t -sw
 $screenshot    = grim -g "$(slurp -d)" - | wl-copy
+$screenshotocr = bash /home/ghost/.config/hypr/screenshot-ocr.sh
 $externalscript1 = bash /home/ghost/.config/hypr/restart.sh
 $externalscript2 = bash /home/ghost/.config/hypr/wallpaper.sh
 
@@ -196,6 +197,7 @@ bind = $mainMod SHIFT, UP, fullscreenstate, 1
 bind = $mainMod SHIFT, N, exec, $externalscript2
 bind = Alt, Tab, cyclenext, prev
 bind = $mainMod SHIFT, S, exec, $screenshot
+bind = $mainMod CTRL SHIFT, S, exec, $screenshotocr
 bind = $mainMod SHIFT, A, exec, grim -g "$(slurp -d)" - | swappy -f -
 bind = $mainMod, B, exec, $externalscript1
 
