Fix screenshot OCR and disable GTK dark theme
Improved screenshot-ocr.sh with better error handling: specify English language for tesseract, use printf instead of echo for clipboard, and show detailed error messages. Commented out GTK_THEME=Adwaita:dark to prevent forcing dark theme on all GTK apps including Nautilus.

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -45,7 +45,7 @@ exec-once = hyprctl keyword monitor "FALLBACK,1920x1080@60,auto,1"
 ### ENVIRONMENT VARIABLES ###
 env = XCURSOR_SIZE, 24
 env = HYPRCURSOR_SIZE, 24
-env = GTK_THEME,Adwaita:dark
+#env = GTK_THEME,Adwaita:dark
 
 ### LOOK AND FEEL ###
 general {
