Add slurp window rules to keep selection on top
Added window and layer rules for slurp screenshot selection tool to ensure it stays on top of clipboard manager and other windows during screenshot selection.

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -319,6 +319,12 @@ windowrule = match:class ^$, match:title ^$, no_focus on
 # Always float Picture-in-Picture windows, never tile them
 windowrule = match:title ^(Picture-in-Picture|PiP)$, float on
 
+# Screenshot selection tool (slurp) - always on top
+windowrule = match:class ^(slurp)$, float on
+windowrule = match:class ^(slurp)$, fullscreen on
+windowrule = match:class ^(slurp)$, pin on
+layerrule = match:namespace ^(slurp)$, noanim
+
 # Window rules for clipse clipboard manager
 windowrule = match:class clipse, float on
 windowrule = match:class clipse, size 622 652
