Enable GTK dark theme and fix Bluetooth disconnect issue
- Enable GTK_THEME=Adwaita:dark for system-wide dark mode
- Fix duplicate SUPER+SHIFT+K keybinding causing Bluetooth headphones to disconnect
  - Moved Bluetooth reconnect to SUPER+SHIFT+B
  - Changed media stop to direct pkill command
- Update window rules to Hyprland 0.53 syntax (windowrule with match:)
- Add dark theme preference for GTK4 apps in autostart
- Disable hyprpaper splash screen

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -45,7 +45,7 @@ exec-once = hyprctl keyword monitor "FALLBACK,1920x1080@60,auto,1"
 ### ENVIRONMENT VARIABLES ###
 env = XCURSOR_SIZE, 24
 env = HYPRCURSOR_SIZE, 24
-#env = GTK_THEME,Adwaita:dark
+env = GTK_THEME,Adwaita:dark
 
 ### LOOK AND FEEL ###
 general {
@@ -203,12 +203,13 @@ bind = $mainMod, B, exec, $externalscript1
 
 # Expo plugin keybindings
 # bind = $mainMod, E, hyprexpo:expo, toggle
-#bind = $mainMod, grave, hyprexpo:expo, toggle  
+#bind = $mainMod, grave, hyprexpo:expo, toggle
 
 # utility
 bind = $mainMod SHIFT, M, exec, python3 /home/ghost/Documents/Code/linux-sysutil/cli_tool.py media start
 bind = $mainMod SHIFT, K, exec, python3 /home/ghost/Documents/Code/linux-sysutil/cli_tool.py media stop
-bind = $mainMod SHIFT, K, exec, python3 /home/ghost/Documents/Code/linux-sysutil/cli_tool.py net bluetooth 2
+# bind = $mainMod SHIFT, K, exec, python3 /home/ghost/Documents/Code/linux-sysutil/cli_tool.py net bluetooth 2  # Disabled - duplicate keybinding
+bind = $mainMod SHIFT, B, exec, python3 /home/ghost/Documents/Code/linux-sysutil/cli_tool.py net bluetooth 2  # Changed to SUPER+SHIFT+B
 
 
 # Focus movement
@@ -323,7 +324,7 @@ windowrule = match:title ^(Picture-in-Picture|PiP)$, float on
 windowrule = match:class ^(slurp)$, float on
 windowrule = match:class ^(slurp)$, fullscreen on
 windowrule = match:class ^(slurp)$, pin on
-layerrule = match:namespace ^(slurp)$, noanim
+#layerrule = match:namespace ^(slurp)$, noanim
 
 # Window rules for clipse clipboard manager
 windowrule = match:class clipse, float on
