--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -20,3 +20,4 @@ preload = /mnt/DATA/Home_Folders/Pictures/wallpapers/Sunset-room.png
 
 # Assign a wallpaper to the eDP-1 monitor to avoid warning
 wallpaper = eDP-1,/mnt/DATA/Home_Folders/Pictures/wallpapers/Dark_Nature.png
+splash = false
