--- a/hypr/modules/autostart.conf
+++ b/hypr/modules/autostart.conf
@@ -13,3 +13,7 @@ exec-once = bash /home/ghost/.config/hypr/wallpaper.sh
 #exec-once = wofi --show drun -s /home/ghost/.config/wofi/style.css
 exec-once = hyprctl keyword monitor "FALLBACK,1920x1080@60,auto,1"
 exec-once = dbus-update-activation-environment --systemd --all
+#exec = gsettings set org.gnome.desktop.interface gtk-theme "YOUR_DARK_GTK3_THEME"   # for GTK3 apps
+exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"   # for GTK4 apps
+
+env = QT_QPA_PLATFORMTHEME,qt6ct   # for Qt apps
