--- a/hypr/modules/keys.conf
+++ b/hypr/modules/keys.conf
@@ -35,7 +35,7 @@ bind = $mainMod SHIFT, E, exec, $shutdown
 
 # utility
 bind = $mainMod SHIFT, M, exec, python3 /home/ghost/Documents/Code/linux-sysutil/cli_tool.py media start
-bind = $mainMod SHIFT, K, exec, python3 /home/ghost/Documents/Code/linux-sysutil/cli_tool.py media stop
+bind = $mainMod SHIFT, K, exec, bash -c "pkill mpv"
 bind = $mainMod SHIFT, B, exec, python3 /home/ghost/Documents/Code/linux-sysutil/cli_tool.py net bluetooth 2
 
 
