Add system-wide volume OSD monitoring with SwayOSD
- Add swayosd-monitor.sh to monitor all PipeWire volume changes
- Uses pactl subscribe to detect volume changes from any source
- Triggers SwayOSD overlay for all volume adjustments, not just media keys
- Works with GUI mixers, wpctl commands, and any application changing volume
- Started automatically via Hyprland autostart

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -29,6 +29,7 @@ exec-once = hyprpaper
 exec-once = hypridle
 exec-once = swaync
 exec-once = swayosd-server
+exec-once = bash /home/ghost/.config/hypr/swayosd-monitor.sh
 exec-once = clipse -listen
 exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
