Reorganize scripts and add screenshot to README
- Move all scripts from hypr/ to dedicated scripts/ directory
  - clipsync.sh
  - restart.sh
  - screenshot-ocr.sh
  - swayosd-monitor.sh
  - toggle-internal-display.sh
  - wallpaper.sh
- Update all script references in config files
  - hypr/hyprland.conf
  - hypr/modules/autostart.conf
  - hypr/modules/keys.conf
  - hypr/modules/monitors.conf
  - scripts/restart.sh
- Add desktop screenshot to README
- Update README instructions to reflect new script paths
- Remove unused plugin binaries (hyprexpo.so, hyprtrails.so)

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -15,9 +15,9 @@ $mainMod       = SUPER
 $lockscreen    = hyprlock
 $notification  = swaync-client -t -sw
 $screenshot    = grim -g "$(slurp -d)" - | wl-copy
-$screenshotocr = bash /home/ghost/.config/hypr/screenshot-ocr.sh
-$externalscript1 = bash /home/ghost/.config/hypr/restart.sh
-$externalscript2 = bash /home/ghost/.config/hypr/wallpaper.sh
+$screenshotocr = bash /home/ghost/.config/scripts/screenshot-ocr.sh
+$externalscript1 = bash /home/ghost/.config/scripts/restart.sh
+$externalscript2 = bash /home/ghost/.config/scripts/wallpaper.sh
 
 
 ### AUTOSTART ###
@@ -29,15 +29,15 @@ exec-once = hyprpaper
 exec-once = hypridle
 exec-once = swaync
 exec-once = swayosd-server
-exec-once = bash /home/ghost/.config/hypr/swayosd-monitor.sh
+exec-once = bash /home/ghost/.config/scripts/swayosd-monitor.sh
 exec-once = clipse -listen
 exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
-exec-once = bash /home/ghost/Documents/dots/hypr/clipsync.sh
+exec-once = bash /home/ghost/Documents/dots/scripts/clipsync.sh
 exec-once = nm-applet
 exec-once = nmcli radio wifi on
 exec-once = systemctl --user start hyprpolkitagent
-exec-once = bash /home/ghost/.config/hypr/wallpaper.sh
+exec-once = bash /home/ghost/.config/scripts/wallpaper.sh
 exec-once = wofi --show drun -s /home/ghost/.config/wofi/style.css
 exec-once = hyprctl keyword monitor "FALLBACK,1920x1080@60,auto,1"
 
