--- a/hypr/modules/autostart.conf
+++ b/hypr/modules/autostart.conf
@@ -5,11 +5,11 @@ exec-once = swaync
 #exec-once = swayosd-server
 exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
-exec-once = bash /home/ghost/Documents/dots/hypr/clipsync.sh
+exec-once = bash /home/ghost/Documents/dots/scripts/clipsync.sh
 exec-once = nm-applet
 exec-once = nmcli radio wifi on
 exec-once = systemctl --user start hyprpolkitagent
-exec-once = bash /home/ghost/.config/hypr/wallpaper.sh
+exec-once = bash /home/ghost/.config/scripts/wallpaper.sh
 #exec-once = wofi --show drun -s /home/ghost/.config/wofi/style.css
 exec-once = hyprctl keyword monitor "FALLBACK,1920x1080@60,auto,1"
 exec-once = dbus-update-activation-environment --systemd --all
