--- a/hypr/modules/keys.conf
+++ b/hypr/modules/keys.conf
@@ -10,9 +10,9 @@ $lockscreen    = hyprlock
 $notification  = swaync-client -t -sw
 $screenshot    = grim -g "$(slurp -d)" - | wl-copy
 $shutdown      = wlogout
-$screenshotocr = bash /home/ghost/.config/hypr/screenshot-ocr.sh
-$externalscript1 = bash /home/ghost/.config/hypr/restart.sh
-$externalscript2 = bash /home/ghost/.config/hypr/wallpaper.sh
+$screenshotocr = bash /home/ghost/.config/scripts/screenshot-ocr.sh
+$externalscript1 = bash /home/ghost/.config/scripts/restart.sh
+$externalscript2 = bash /home/ghost/.config/scripts/wallpaper.sh
 
 # Application launchers and system actions
 bind = $mainMod, T, exec, $terminal
