--- a/hypr/modules/monitors.conf
+++ b/hypr/modules/monitors.conf
@@ -3,7 +3,7 @@
 monitor = eDP-1, preferred, 0x0, 1
 monitor = , preferred, auto, 1
 #monitor = DP-4, preferred, auto, 1, transform, 1
-$externalscript2 = bash /home/ghost/.config/hypr/wallpaper.sh
+$externalscript2 = bash /home/ghost/.config/scripts/wallpaper.sh
 
 # Laptop lid switch handler
 #bindl = , switch:Lid Switch, exec, $lockscreen
